讀取 hosting.json 裡的 Port 設定

--- a/BlazorServer.Server/BlazorServer.Server.csproj
+++ b/BlazorServer.Server/BlazorServer.Server.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\BlazorServer.Shared\BlazorServer.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="hosting.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
