修改 swagger.xml 路徑

--- a/BlazorServer.Server/BlazorServer.Server.csproj
+++ b/BlazorServer.Server/BlazorServer.Server.csproj
@@ -7,17 +7,17 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <NoWarn>1701;1702;1591</NoWarn>
-    <DocumentationFile>C:\CSharpProjectTemplate\BlazorServer\BlazorServer.Server\\swagger.xml</DocumentationFile>
+    <DocumentationFile>swagger.xml</DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <NoWarn>1701;1702;1591</NoWarn>
-    <DocumentationFile>C:\CSharpProjectTemplate\BlazorServer\BlazorServer.Server\swagger.xml</DocumentationFile>
+    <DocumentationFile>swagger.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.7" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" />
     <PackageReference Include="MySql.Data" Version="8.0.15" />
@@ -43,6 +43,9 @@
 
   <ItemGroup>
     <None Update="database.sqlite">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="swagger.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
