發行後執行批次檔

--- a/BlazorServer.Server/BlazorServer.Server.csproj
+++ b/BlazorServer.Server/BlazorServer.Server.csproj
@@ -50,6 +50,9 @@
     <None Update="BlazorServer.Server.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Publish.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
