專案設定 appsettings.Release.json 與 appsettings.Debug.json 永遠複製

--- a/BlazorServer.Server/BlazorServer.Server.csproj
+++ b/BlazorServer.Server/BlazorServer.Server.csproj
@@ -35,6 +35,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="appsettings.Debug.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.Release.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="hosting.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
